--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,24 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.container {
+    max-width: 2000px;
+    margin: auto;
+}
+
+header {
+    height: 100px;
+    background-color: #6aa0fc;
+    background-image: url(../img/pattern.png);
+    background-size: contain;
+}
+
+#logo {
+    height: 100%;
+    padding: 20px 0;
+}
+
+img {
+    height: 100%;
+}
