--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 .container {
-    max-width: 2000px;
+    max-width: 1500px;
     margin: auto;
 }
 
@@ -22,4 +22,24 @@ header {
 
 img {
     height: 100%;
+}
+
+#title {
+    margin: 20px 0;
+}
+
+#author {
+    color: #6aa0fc;
+}
+
+#date {
+    font-size: 12px;
+}
+
+address {
+    font-style: normal;
+}
+
+h1 {
+    font-size: 53px;
 }
