--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     box-sizing: border-box;
+    padding: 0;
 }
 
 .container {
@@ -46,4 +47,40 @@ h1 {
 
 #tim-barners-lee img {
     height: 500px;
+}
+
+#central-body {
+    margin: 20px 0;
+    font-size: 24px;
+}
+
+
+.highlights {
+    background-color: rgb(254 253 53);
+}
+
+ul {
+    margin: 20px 0;
+    padding-left: 20px;
+}
+
+table {
+    margin: 20px 0;
+}
+
+thead {
+    background-color: rgb(91 167 227);
+    color: white;
+}
+
+.oddrow {
+    background-color: rgb(190 227 241);
+}
+
+.small-cells {
+    width: 375px;
+}
+
+td {
+    max-width: 750px;
 }
